<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LocationPictures.LocationPicturesActivity"
    android:background="@color/colorLighterGray">

    <LinearLayout
        android:id="@+id/llyt_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorLightGray">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_position"/>

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorDarkGray"
            android:text="@string/text_location_list"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llyt_toolbar"
        android:scrollbars="vertical"
        android:gravity="center_horizontal"
        android:stretchMode="columnWidth"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:textColor="@color/colorDarkGray"
        android:text="@string/text_no_images"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:id="@+id/rlyt_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparentGray90"
        android:visibility="visible">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_loading"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:lottie_colorFilter="@color/colorWhite"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="64dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/text_loading_places"/>

    </RelativeLayout>
</RelativeLayout>