<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartalgorithms.locationpictures.Home.HomeActivity">

    <LinearLayout
        android:id="@+id/llyt_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorLightGray">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_position"/>

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="@color/colorDarkGray"
            android:text="@string/text_location_list"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="12dp"
                android:src="@drawable/ic_refresh"
                />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_reload"
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:lottie_colorFilter="@color/colorPrimaryDark"
                app:lottie_loop="true"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlyt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llyt_toolbar"
        android:layout_above="@+id/tv_current_location">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_places"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:textColor="@color/colorDarkGray"
            android:text="@string/text_waiting_for_current_location"
            android:visibility="visible"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlyt_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparentGray90"
        android:visibility="gone">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_loading"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            app:lottie_colorFilter="@color/colorWhite"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lav_loading"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/text_loading"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorDarkGray"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
